<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/edge_items_light_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/splashW"
        android:padding="10dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/address"
            android:fontFamily="@font/teachers_medium"
            android:textColor="@color/buttonBg"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/note"
            android:fontFamily="@font/teachers_medium"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/lightGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/OrderStatus_"
                    android:fontFamily="@font/teachers_medium"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtOrderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:fontFamily="@font/teachers_medium"
                    android:layout_marginStart="10dp"
                    android:textAllCaps="false"
                    android:textSize="18sp"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Date"
                android:fontFamily="@font/teachers_medium"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTotalItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Items"
                android:fontFamily="@font/teachers_regular"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/lightGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:maxLines="2"
                android:fontFamily="@font/teachers_medium"
                android:text="@string/OrderNumber"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtOrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:maxLines="2"
                android:fontFamily="@font/teachers_regular"
                android:text="123456789"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:maxLines="2"
                android:fontFamily="@font/teachers_medium"
                android:text="@string/Amount"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtOrderAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/teachers_regular"
                android:gravity="center"
                android:maxLines="2"
                android:text="00"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>